force-app/main/default/objects/Job_Application__c/fields/Federal_Income_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Federal_Income_Tax_Amount__c</fullName>
    <description>Total amount of Federal Income Tax</description>
    <label>Federal Income Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>