force-app/main/default/objects/Job_Application__c/fields/Medicare_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Tax_Amount__c</fullName>
    <description>Total amount of Medicare tax</description>
    <label>Medicare Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>