force-app/main/default/objects/Job_Application__c/fields/Monthly_Take_Home_Pay__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Take_Home_Pay__c</fullName>
    <description>Total monthly pay (salary) minus federal income tax, social security tax, and Medicare withholding</description>
    <label>Monthly Take-Home Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>