force-app/main/default/objects/Job_Application__c/fields/Social_Security_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Social_Security_Tax_Amount__c</fullName>
    <description>Total amount of Social Security tax</description>
    <label>Social Security Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>