force-app/main/default/objects/Job_Application__c/fields/Yearly_Take_Home_Pay__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Take_Home_Pay__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total yearly pay (salary) minus federal income tax, social security tax, and Medicare withholding</description>
    <label>Yearly Take-Home Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>